# Perception

./: .gitignore  CMakeLists.txt  README.en.md  README.md
config/: perception_offline.yaml
include/: common.h  config.h
include/ai_engine/: ecarx_engine.h  ncnn.h  ncnn_engine.h
include/operator/: letter_box.h  predbox_nms.h  proportion_resize_border.h  sub_mean_scale.h  yolov5_decoder.h
include/task/: yolov5.h
include/utils/: box.h  file.h  log.h  math.h  tensor.h
lib/aarch64/Eigen/share/pkgconfig/: eigen3.pc
lib/aarch64/googletest-dev/lib/: libgmock.so.1.14.0  libgmock_main.so.1.14.0  libgtest.so.1.14.0
lib/aarch64/googletest-dev/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
lib/aarch64/googletest/lib/: libgtest_main.so.1.14.0
lib/aarch64/ncnn/include/ncnn/: platform.h
lib/aarch64/ncnn/lib/cmake/ncnn/: ncnn.cmake
lib/aarch64/ncnn/lib/pkgconfig/: ncnn.pc
lib/aarch64/opencv-dev/include/opencv4/opencv2/: cvconfig.h
lib/aarch64/opencv-dev/lib/: libopencv_aruco.so.4.8.0  libopencv_bioinspired.so.4.8.0  libopencv_calib3d.so.4.8.0  libopencv_datasets.so.4.8.0  libopencv_dnn_objdetect.so.4.8.0  libopencv_dpm.so.4.8.0  libopencv_face.so.4.8.0  libopencv_features2d.so.4.8.0  libopencv_flann.so.4.8.0  libopencv_fuzzy.so.4.8.0  libopencv_hfs.so.4.8.0  libopencv_highgui.so.4.8.0  libopencv_img_hash.so.4.8.0  libopencv_intensity_transform.so.4.8.0  libopencv_line_descriptor.so.4.8.0  libopencv_ml.so.4.8.0  libopencv_optflow.so.4.8.0  libopencv_photo.so.4.8.0  libopencv_rapid.so.4.8.0  libopencv_reg.so.4.8.0  libopencv_rgbd.so.4.8.0  libopencv_saliency.so.4.8.0  libopencv_structured_light.so.4.8.0  libopencv_superres.so.4.8.0  libopencv_surface_matching.so.4.8.0  libopencv_text.so.4.8.0  libopencv_tracking.so.4.8.0  libopencv_video.so.4.8.0  libopencv_wechat_qrcode.so.4.8.0  libopencv_ximgproc.so.4.8.0  libopencv_xobjdetect.so.4.8.0  libopencv_xphoto.so.4.8.0
lib/aarch64/opencv-dev/lib/cmake/opencv4/: OpenCVModules.cmake
lib/aarch64/opencv/lib/: libopencv_bgsegm.so.4.8.0  libopencv_ccalib.so.4.8.0  libopencv_dnn_superres.so.4.8.0  libopencv_imgcodecs.so.4.8.0  libopencv_mcc.so.4.8.0  libopencv_objdetect.so.4.8.0  libopencv_phase_unwrapping.so.4.8.0  libopencv_plot.so.4.8.0  libopencv_quality.so.4.8.0  libopencv_shape.so.4.8.0  libopencv_stereo.so.4.8.0  libopencv_stitching.so.4.8.0  libopencv_videoio.so.4.8.0  libopencv_videostab.so.4.8.0  libopencv_xfeatures2d.so.4.8.0
lib/aarch64/opencv/lib/cmake/opencv4/: OpenCVConfig.cmake
lib/aarch64/yaml-cpp-dev/lib/: libyaml-cpp.so.0.6.0
lib/aarch64/yaml-cpp-dev/lib/cmake/yaml-cpp/: yaml-cpp-targets-release.cmake
lib/aarch64/yaml-cpp/lib/: libyaml-cpp.so.0.8.0
lib/aarch64/yaml-cpp/lib/pkgconfig/: yaml-cpp.pc
lib/x86/Eigen/share/eigen3/cmake/: Eigen3ConfigVersion.cmake
lib/x86/Eigen/share/pkgconfig/: eigen3.pc
lib/x86/googletest-dev/lib/: libgmock.so.1.14.0  libgmock_main.so.1.14.0  libgtest.so.1.14.0  libgtest_main.so.1.14.0
lib/x86/googletest-dev/lib/cmake/GTest/: GTestTargets-noconfig.cmake
lib/x86/googletest-dev/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
lib/x86/ncnn/include/ncnn/: platform.h
lib/x86/ncnn/lib/: libncnn.so.1
lib/x86/ncnn/lib/cmake/ncnn/: ncnn-release.cmake
lib/x86/opencv-dev/include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
lib/x86/opencv-dev/lib/: libopencv_alphamat.so.4.8.0  libopencv_alphamat.so.408  libopencv_aruco.so.4.8.0  libopencv_bgsegm.so.4.8.0  libopencv_bioinspired.so.4.8.0  libopencv_calib3d.so.4.8.0  libopencv_ccalib.so.4.8.0  libopencv_datasets.so.4.8.0  libopencv_dnn_objdetect.so.4.8.0  libopencv_dnn_superres.so.4.8.0  libopencv_dpm.so.4.8.0  libopencv_face.so.4.8.0  libopencv_features2d.so.4.8.0  libopencv_flann.so.4.8.0  libopencv_freetype.so.4.8.0  libopencv_freetype.so.408  libopencv_fuzzy.so.4.8.0  libopencv_hdf.so.4.8.0  libopencv_hdf.so.408  libopencv_hfs.so.4.8.0  libopencv_highgui.so.4.8.0  libopencv_img_hash.so.4.8.0  libopencv_imgcodecs.so.4.8.0  libopencv_intensity_transform.so.4.8.0  libopencv_line_descriptor.so.4.8.0  libopencv_mcc.so.4.8.0  libopencv_ml.so.4.8.0  libopencv_objdetect.so.4.8.0  libopencv_optflow.so.4.8.0  libopencv_phase_unwrapping.so.4.8.0  libopencv_photo.so.4.8.0  libopencv_plot.so.4.8.0  libopencv_quality.so.4.8.0  libopencv_rapid.so.4.8.0  libopencv_reg.so.4.8.0  libopencv_rgbd.so.4.8.0  libopencv_saliency.so.4.8.0  libopencv_shape.so.4.8.0  libopencv_stereo.so.4.8.0  libopencv_stitching.so.4.8.0  (+15 more)
lib/x86/opencv-dev/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
lib/x86/yaml-cpp-dev/lib/: libyaml-cpp.so.0.6.0
lib/x86/yaml-cpp-dev/lib/cmake/yaml-cpp/: yaml-cpp-targets.cmake
lib/x86/yaml-cpp/lib/: libyaml-cpp.so.0.8.0
lib/x86/yaml-cpp/lib/cmake/yaml-cpp/: yaml-cpp-config.cmake  yaml-cpp-targets-noconfig.cmake
lib/x86/yaml-cpp/lib/pkgconfig/: yaml-cpp.pc
src/: CMakeLists.txt
src/ai_engine/: ecarx_engine.cc  ncnn.cc  ncnn_engine.cc
src/operator/: letter_box.cc  predbox_nms.cc  proportion_resize_border.cc  sub_mean_scale.cc  yolov5_decoder.cc
src/task/: yolov5.cc
src/utils/: box.cc  file.cc
test/: CMakeLists.txt  unittest_main.cc
test/utils/: log_unittest.cc
tools/: CMakeLists.txt  perception_offline.cc
